--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -58,11 +58,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.illinois.edu/academic-job-board/job-details?jobID=123473'>Job Details: Applied Health Sciences: Assistant or Associate Professor in Speech-Language Pathology - Speech and Hearing Science (123473)</a></h5> 
+<h5><a href='https://jobs.illinois.edu/academic-job-board/job-details?jobID=123473'>Job Details: Applied Health Sciences: Assistant or Associate Professor in Speech-Language Pathology - Speech and Hearing Science (123473)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999698155582-speech-pathologist-evaluation-training-team'>Hearing and Speech Center of Florida Speech Pathologist-Evaluation & Training Team | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999698155582-speech-pathologist-evaluation-training-team'>Hearing and Speech Center of Florida Speech Pathologist-Evaluation & Training Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999698191686-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999698191686-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -86,7 +86,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999698192853-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999698192853-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Columbia, MO, USA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -102,11 +102,11 @@
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/prn-speech-language-pathologist-cobb-or-dekalb-county-cnf9VE9ECr6AHLaKjNoogA'>PRN Speech Language Pathologist - (Cobb or Dekalb County) #1191 job at MedSide Healthcare in Atlanta, GA, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/prn-speech-language-pathologist-cobb-or-dekalb-county-cnf9VE9ECr6AHLaKjNoogA'>PRN Speech Language Pathologist - (Cobb or Dekalb County) #1191 job at MedSide Healthcare in Atlanta, GA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Atlanta, GAAtlanta, GA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4490609002'>Job Application for ST, Speech Therapist, Home Health at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4490609002'>Job Application for ST, Speech Therapist, Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Tampa, FL</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -169,7 +169,7 @@ Language Pathologists to work Full-Time for our Skilled Nursing Facility in?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
-<h5><a href='https://championpartnersinrehab.applicantstack.com/x/detail/a26wws7oi0uz'>Speech-Language Pathologist Clinical Fellowship - Champion ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://championpartnersinrehab.applicantstack.com/x/detail/a26wws7oi0uz'>Speech-Language Pathologist Clinical Fellowship - Champion ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Title: Speech-Language Pathologist Clinical Fellowship. ID: 7048-GAD. Location: 
 Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
@@ -261,7 +261,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://new-story-1.workable.com/j/C3C19D0FA9'>New Story - Jobs: Speech Language Pathologist - Apply online</a></h5> 
+<h5><a href='https://new-story-1.workable.com/j/C3C19D0FA9'>New Story - Jobs: Speech Language Pathologist - Apply online</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -289,7 +289,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Dover, DE</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4476793002'>Job Application for Speech Language Pathologist, SLP - Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4476793002'>Job Application for Speech Language Pathologist, SLP - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Newark, DE</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -333,7 +333,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://access-physical-therapy-wellness.breezy.hr/p/6c9a7b152dc1-speech-language-pathologist'>Speech Language Pathologist at Access Physical Therapy & Wellness</a></h5> 
+<h5><a href='https://access-physical-therapy-wellness.breezy.hr/p/6c9a7b152dc1-speech-language-pathologist'>Speech Language Pathologist at Access Physical Therapy & Wellness</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -381,7 +381,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Montgomery</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4463532002'>Job Application for Speech Language Pathologist (SLP) - Per Diem at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4463532002'>Job Application for Speech Language Pathologist (SLP) - Per Diem at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Hagerstown, MD</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -439,7 +439,7 @@ Speech-Pathologist Needed immediately - full time position in Garden City, from 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4459750002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4459750002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Prescott, AZ</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
